# AT-AGENTS

./: .env  .gitignore  README.md  compose.yaml  data.py  docker_compose.yaml  main.py  pyproject.toml  quick_start.sh  quick_start_ios.sh  quick_start_lin.sh  quick_start_win.ps1  requirements.txt  tmp.txt
data/: data.json
logic/: main.py
logic/agents_config/: Kutdusov_parking_kb_v3_2.xml
logic/at_simulation_subsystem/: ResourceParameters_v3.xml
logic/planner/: ATAgentPlanner.py  agents.py  generate_plan.py  planning.py  search.py  utils.py
package/agent_prototype/: Dockerfile
package/nginx/: Dockerfile  conf.nginx
package/src/: config.yaml
package/src/agents_config/: AGENTS.json  selected_rules.json
package/src/at_simulation_subsystem/: ResourceParameters_v3_3.xml  ResourceParameters_v3_4.xml  ResourceParameters_v3_5.xml  ResourceParameters_v3_6.xml  ResourceParameters_v3_7.xml  ResourceParameters_v3_8.xml  rao_v3.xml  rao_v3_3.xml  rao_v3_4.xml
package/src/exp/: exp.json  selected_exp.json
package/src/kb/: Kutdusov_parking_kb_v3_3.xml  Kutdusov_parking_kb_v3_4.xml  Kutdusov_parking_kb_v3_5.kbs  Kutdusov_parking_kb_v3_5.xml  Kutdusov_parking_kb_v3_6.kbs  Kutdusov_parking_kb_v3_6.xml  Kutdusov_parking_kb_v3_7.kbs  Kutdusov_parking_kb_v3_8.kbs
templates/: at_solver.html  base_editor.html  base_results.html  create.html  create_agent.html  create_state_space.html  index.html  input_experiment_param.html  list_agents.html  login.html  rao_view.html  rao_view_progon.html  todo.html  todo_output.html
userdata/: user_data.json
(+5 files in other folders)
